--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-produtos></app-produtos>
+<div class="container-fluid text-center p-3">
+  <div class="display-5 text-white mt-2" style="font-family: Arial, Helvetica, sans-serif;">
+    TABELA PRODUTOS
+  </div>
+  <app-produtos></app-produtos>
+</div>
